--- a/about.html
+++ b/about.html
@@ -7,9 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <title>Dr. Richie</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/about.css">
+    <title>Dr. Richie</title>
+
 </head>
 
 <body>
@@ -47,8 +48,8 @@
                     <img src="images/blog-card.jpg" alt="">
                     <p>To meet the ALX program requirement, three engineers (Fatumah Nassali, Martin Opolot and Wambi Micheal) designed Dr Richi. <br>
                         Dr. Richie is a virtual doctor you can carry around with you in your palm or laptop and can be accessed anytime anywhere. 
-                        As a physician, it can provide medical-related advice to you based on your symptoms and signs, 
-                        and also act as a resourceful doctor for your health and fitness concerns.                        
+                        As a virtual physician, it can provide medical-related advice to you based on your symptoms and signs, 
+                        and it can also act as a resourceful doctor for your health and fitness questions.                        
                         <br>
                         <button><a href="#">Get Started</a></button>
                     </p>
